--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "pkg-placeholder",
+  "name": "idlefy",
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@8.15.3",
-  "description": "_description_",
+  "description": "Defer non-critical tasks to run when the main thread is idle",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/pkg-placeholder#readme",
+  "funding": "https://github.com/sponsors/harshkc",
+  "homepage": "https://github.com/harshkc/idlefy#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/pkg-placeholder.git"
+    "url": "git+https://github.com/harshkc/idlefy.git"
   },
-  "bugs": "https://github.com/antfu/pkg-placeholder/issues",
+  "bugs": "https://github.com/harshkc/idlefy/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
@@ -61,8 +61,7 @@
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
-    "vite": "^5.1.4",
-    "vitest": "^1.3.1"
+    "vite": "^5.1.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
