--- a/package.json
+++ b/package.json
@@ -31,12 +31,9 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/min/index.cjs",
       "default": "./dist/index.mjs"
     },
-    "./min": {
-      "default": "./dist/min/index.mjs"
-    },
+    "./min/index.mjs": "./dist/min/index.mjs",
     "./idleQueue.js": {
       "types": "./dist/idleQueue.d.ts",
       "default": "./dist/idleQueue.mjs"
