--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "idlefy",
   "type": "module",
-  "version": "1.0.1",
+  "version": "1.0.2-beta.0",
   "packageManager": "pnpm@8.15.3",
   "description": "Defer non-critical tasks to run when the main thread is idle",
   "author": {
